gccida/g1/output_loc_sequence
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_loc_sequence/src/dwarf2out.c:3381:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 2778, "output_loc_operands"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_loc_sequence/src/dwarf2out.c:3428:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 2789, "output_loc_operands"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/output_loc_sequence/src/obj/dwarf2out.o] Error 1
